# spotify-comparer-backend

./: Cargo.toml  dockerfile
src/: main.rs
src/api/: friends_api.rs  mod.rs  saved_tracks_api.rs  users_api.rs
src/db/: mod.rs  spotify_db.rs
src/models/: artist.rs  cors.rs  friends.rs  mod.rs  saved_track.rs  track.rs  user.rs
