[package]
name = "spotify-user-comparer-backend"
version = "0.1.0"
edition = "2021"
author = ["Bruno <bruno.ramirez.b@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.5.0"
default-features = false
features = ["sync"]